syntax = "proto3";

package obd.v1;

import "google/protobuf/timestamp.proto";
message User {
    int64 user_id = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
    string password = 5;
    google.protobuf.Timestamp password_changed_at = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp delete_at = 8;
}

